<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4d4d4d"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:paddingVertical="10dp">

        <TextView
            android:id="@+id/tvOldInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="end|center_vertical"
            android:paddingHorizontal="30dp"
            android:text=""
            android:textColor="@color/teal_200"
            android:textSize="25sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCurrentOperand"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center_vertical|start"
                android:paddingStart="50dp"
                android:text=""
                android:textSize="30sp"
                />

            <TextView
                android:id="@+id/tvInput"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:gravity="end|center_vertical"
                android:paddingHorizontal="30dp"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="40sp"
                />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/allClear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/light_gray"
            android:text="@string/ac"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/light_gray"
            android:text="@string/c"
            android:textSize="20sp"
            />


        <ImageButton
            android:id="@+id/btnBackspace"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="5"
            android:background="@color/light_gray"
            android:src="@drawable/img_backspace"
            android:contentDescription="@string/backspace"
            />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/light_gray"
            android:text="@string/divide"
            android:textColor="@color/green"
            android:textSize="30sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/light_gray"
            android:text="@string/_7"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/light_gray"
            android:text="@string/_8"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/light_gray"
            android:text="@string/_9"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/light_gray"
            android:text="@string/multiply"
            android:textColor="@color/green"
            android:textSize="30sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnFour"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/light_gray"
            android:text="@string/_4"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/light_gray"
            android:text="@string/_5"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/btnSix"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/light_gray"
            android:text="@string/_6"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/light_gray"
            android:text="@string/subtract"
            android:textColor="@color/green"
            android:textSize="30sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOne"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/light_gray"
            android:text="@string/_1"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/light_gray"
            android:text="@string/_2"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/btnThree"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/light_gray"
            android:text="@string/_3"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/light_gray"
            android:text="@string/add"
            android:textColor="@color/green"
            android:textSize="30sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDot"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/light_gray"
            android:text="@string/decimal"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/btnZero"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/light_gray"
            android:text="@string/_0"
            android:textSize="20sp"
            />


        <Button
            android:id="@+id/btnEqual"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/orange"
            android:text="@string/equals"
            android:textSize="20sp"
            />
    </LinearLayout>
</LinearLayout>
